# SalmoPredict

./: .gitignore  LICENSE  MANIFEST.in  README.md  RELEASING.md  environment.yml  pyproject.toml
examples/: README.md  example_features.csv  example_meta.csv  example_with_sample.csv
salmopredict/: __init__.py  cli.py  config.py  pipeline.py
salmopredict/core/: __init__.py  align.py  io_tables.py  modelinfo.py  predict.py
salmopredict/gui/: __init__.py  app.py
salmopredict/models/model_VF_USA_deploy/: metadata.json  predictor.pkl
salmopredict/models/model_VF_USA_deploy/models/: trainer.pkl
salmopredict/models/model_VF_USA_deploy/models/NeuralNetFastAI_r100_BAG_L1/: model.pkl
salmopredict/models/model_VF_USA_deploy/models/NeuralNetFastAI_r100_BAG_L1/S1F1/: model-internals.pkl
salmopredict/models/model_VF_USA_deploy/models/NeuralNetFastAI_r100_BAG_L1/S1F2/: model-internals.pkl  model.pkl
salmopredict/models/model_VF_USA_deploy/models/NeuralNetFastAI_r100_BAG_L1/S1F4/: model-internals.pkl  model.pkl
salmopredict/models/model_VF_USA_deploy/models/NeuralNetFastAI_r100_BAG_L1/S1F5/: model.pkl
salmopredict/models/model_VF_USA_deploy/models/NeuralNetFastAI_r134_BAG_L1/S1F1/: model-internals.pkl  model.pkl
salmopredict/models/model_VF_USA_deploy/models/NeuralNetFastAI_r134_BAG_L1/S1F2/: model-internals.pkl  model.pkl
salmopredict/models/model_VF_USA_deploy/models/NeuralNetFastAI_r134_BAG_L1/S1F3/: model.pkl
salmopredict/models/model_VF_USA_deploy/models/NeuralNetFastAI_r134_BAG_L1/S1F5/: model.pkl
salmopredict/models/model_VF_USA_deploy/models/NeuralNetFastAI_r156_BAG_L1/: model.pkl
salmopredict/models/model_VF_USA_deploy/models/NeuralNetFastAI_r156_BAG_L1/S1F1/: model.pkl
salmopredict/models/model_VF_USA_deploy/models/NeuralNetFastAI_r156_BAG_L1/S1F2/: model-internals.pkl  model.pkl
salmopredict/models/model_VF_USA_deploy/models/NeuralNetFastAI_r156_BAG_L1/S1F3/: model-internals.pkl  model.pkl
salmopredict/models/model_VF_USA_deploy/models/NeuralNetFastAI_r156_BAG_L1/S1F4/: model-internals.pkl
salmopredict/models/model_VF_USA_deploy/models/NeuralNetFastAI_r156_BAG_L1/S1F5/: model-internals.pkl  model.pkl
salmopredict/models/model_VF_USA_deploy/models/NeuralNetTorch_r121_BAG_L1/: model.pkl
salmopredict/models/model_VF_USA_deploy/models/NeuralNetTorch_r121_BAG_L1/S1F2/: model.pkl
salmopredict/models/model_VF_USA_deploy/models/NeuralNetTorch_r121_BAG_L1/S1F3/: model.pkl
salmopredict/models/model_VF_USA_deploy/models/NeuralNetTorch_r121_BAG_L1/S1F4/: model.pkl
salmopredict/models/model_VF_USA_deploy/models/NeuralNetTorch_r121_BAG_L1/S1F5/: model.pkl
salmopredict/models/model_VF_USA_deploy/models/NeuralNetTorch_r1_BAG_L1/: model.pkl
salmopredict/models/model_VF_USA_deploy/models/NeuralNetTorch_r1_BAG_L1/S1F2/: model.pkl
salmopredict/models/model_VF_USA_deploy/models/NeuralNetTorch_r30_BAG_L1/: model.pkl
salmopredict/models/model_VF_USA_deploy/models/WeightedEnsemble_L2/: model.pkl
salmopredict/models/model_default/: learner.pkl
salmopredict/models/model_default/models/NeuralNetFastAI_r134_BAG_L1/: model.pkl
salmopredict/models/model_default/models/NeuralNetTorch_r79_BAG_L1/: model.pkl
scripts/: build_deploy_model.py
(+25 files in other folders)
