[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "salmopredict"
version = "0.1.1"
description = "AutoGluon-based Incidence predictor for Salmonella virulence-factor gene-frequency features"
readme = "README.md"
# Pinned to 3.10 to match the Python version the bundled model was pickled with.
requires-python = ">=3.10,<3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Dongyan Shao", email = "563608176@qq.com" }]
keywords = ["salmonella", "incidence", "autogluon", "prediction", "bioinformatics"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "autogluon.tabular==1.1.1",
    "pandas>=2.0",
    "openpyxl>=3.0",
    "rich-argparse>=1.4",
    "streamlit>=1.30",
]

[project.optional-dependencies]
# The GUI is a headline feature and streamlit is tiny next to autogluon, so it
# now ships in the core dependencies above. This extra is kept as a no-op alias
# so an existing `pip install "salmopredict[gui]"` keeps working.
gui = ["streamlit>=1.30"]

[project.urls]
Homepage = "https://github.com/shaodongyan/SalmoPredict"
Repository = "https://github.com/shaodongyan/SalmoPredict"
Issues = "https://github.com/shaodongyan/SalmoPredict/issues"

[project.scripts]
salmopredict = "salmopredict.cli:main"

[tool.setuptools]
packages = ["salmopredict", "salmopredict.core", "salmopredict.gui"]

[tool.setuptools.package-data]
"salmopredict.gui" = ["assets/*.png"]
# Ship the ~30 MB slim deployment model inside the wheel so `pip install
# salmopredict` works out of the box -- no extra download and no --model flag.
"salmopredict" = ["models/**"]
